--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -5,5 +5,8 @@
 
   <application>
     <activity android:name="com.apptreesoftware.barcodescan.BarcodeScannerActivity" />
+ <meta-data
+            android:name="flutterEmbedding"
+            android:value="2" />
   </application>
 </manifest>
